Fix Modal z-index

--- a/frontend/src/components/form/lyricCard/lyricCard.module.scss
+++ b/frontend/src/components/form/lyricCard/lyricCard.module.scss
@@ -45,7 +45,6 @@ $bottom-height: 3rem + $font-s;
   padding: 3rem;
   gap: 1rem;
   background-color: $white;
-  z-index: 1000;
 }
 
 .bottom {
