--- a/frontend/src/components/modal/modal/modal.module.scss
+++ b/frontend/src/components/modal/modal/modal.module.scss
@@ -16,6 +16,7 @@
   opacity: 0;
   transition-property: opacity visibility;
   transition-duration: 0.2s;
+  z-index: 10000;
 
   &.isOpen {
     visibility: visible;
